Update index.html metadata for project rebranding: Changed title and author to "Store Rating Management" and updated Open Graph and Twitter meta tags for consistency with the new project identity.

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>role-centric-spark</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Store Rating Management</title>
+    <meta name="description" content="" />
+    <meta name="author" content="Store Management" />
 
-    <meta property="og:title" content="role-centric-spark" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Store Management" />
+    <meta property="og:description" content="Store Management" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@rajdesai" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
